* libgcj-classpath-compare.html: Rebuilt.

--- a/htdocs/java/libgcj-classpath-compare.html
+++ b/htdocs/java/libgcj-classpath-compare.html
@@ -8,7 +8,7 @@
 <p>This page compares the "current" cvs libgcj against the "current"
 cvs Classpath.  It was generated using the <code>gen-classpath-compare</code>
 script (available in gcc cvs repository in <code>wwwdocs/bin/</code>) on
-2004-01-30.
+2004-01-31.
 This table intentionally omits certain classes which are not of
 interest.  If the third column shows a "Diff" link, then that means
 the script believes that the class has been merged, but a difference
@@ -24,6 +24,8 @@ differences are currently required.</p>
 <tr> <td>gnu.java.awt.peer.EmbeddedWindowPeer</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> </tr>
 <tr> <td>gnu.java.awt.peer.gtk.GtkEmbeddedWindowPeer</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> </tr>
 <tr> <td>gnu.java.awt.peer.gtk.GtkToolkit</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.awt.peer.gtk.GtkToolkit.diff">Diff</a></td> </tr>
+<tr> <td>gnu.java.nio.ServerSocketChannelImpl</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.nio.ServerSocketChannelImpl.diff">Diff</a></td> </tr>
+<tr> <td>gnu.java.nio.SocketChannelImpl</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/gnu.java.nio.SocketChannelImpl.diff">Diff</a></td> </tr>
 <tr> <td>gnu.javax.swing.plaf.gtk.GtkBorders</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>gnu.javax.swing.plaf.gtk.GtkCheckBoxUI</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>gnu.javax.swing.plaf.gtk.GtkIconFactory</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
@@ -65,12 +67,15 @@ differences are currently required.</p>
 <tr> <td>java.net.InetAddress</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.net.InetAddress.diff">Diff</a></td> </tr>
 <tr> <td>java.net.JarURLConnection</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.net.JarURLConnection.diff">Diff</a></td> </tr>
 <tr> <td>java.net.MimeTypeMapper</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
+<tr> <td>java.net.ServerSocket</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.net.ServerSocket.diff">Diff</a></td> </tr>
+<tr> <td>java.net.Socket</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.net.Socket.diff">Diff</a></td> </tr>
 <tr> <td>java.net.URL</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.net.URL.diff">Diff</a></td> </tr>
 <tr> <td>java.net.URLClassLoader</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.net.URLClassLoader.diff">Diff</a></td> </tr>
 <tr> <td>java.net.URLConnection</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.net.URLConnection.diff">Diff</a></td> </tr>
 <tr> <td>java.nio.DirectByteBufferImpl</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.nio.DirectByteBufferImpl.diff">Diff</a></td> </tr>
 <tr> <td>java.nio.MappedByteBufferImpl</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.nio.MappedByteBufferImpl.diff">Diff</a></td> </tr>
 <tr> <td>java.nio.channels.FileChannelImpl</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.nio.channels.FileChannelImpl.diff">Diff</a></td> </tr>
+<tr> <td>java.nio.channels.spi.AbstractSelectableChannel</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.nio.channels.spi.AbstractSelectableChannel.diff">Diff</a></td> </tr>
 <tr> <td>java.security.BasicPermission</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.security.BasicPermission.diff">Diff</a></td> </tr>
 <tr> <td>java.text.CollationElementIterator</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.text.CollationElementIterator.diff">Diff</a></td> </tr>
 <tr> <td>java.text.CollationKey</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.text.CollationKey.diff">Diff</a></td> </tr>
