--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -44,7 +44,7 @@ and SSH installed, you can check out the GCC sources as follows:</p>
      immediately after <code>cvs</code> in the commands below.</li>
  <li>The command <code>cvs -qz9 checkout -P gcc wwwdocs</code>, 
      will check out both modules in our CVS repository.&nbsp;
-     Module <code>gcc</code> is the compilier source while module
+     Module <code>gcc</code> is the compiler source while module
      <code>wwwdocs</code> contains the sources for our web pages.</li>
 </ol>
 
