--- a/htdocs/fortran/usage.html
+++ b/htdocs/fortran/usage.html
@@ -24,7 +24,7 @@
 <h2><a name="intro">Introduction</a></h2>
 <p>
 This page is meant to give a quick overview on how to use G95. It
-is merely a substitue for a complete manual, which has not yet been
+is merely a substitute for a complete manual, which has not yet been
 written.
 </p>
 
