--- a/htdocs/java/papers/cni/t134.html
+++ b/htdocs/java/papers/cni/t134.html
@@ -124,7 +124,7 @@ class java::lang::String : public java::lang::Object
 CLASS="LITERAL"
 >gcjh</TT
 > tool automatically generates the
-nessary namespace declarations.</P
+necessary namespace declarations.</P
 ><H2
 ><A
 NAME="AEN50"
