--- a/htdocs/projects/h8300-abi.html
+++ b/htdocs/projects/h8300-abi.html
@@ -9,11 +9,11 @@
 <h2>Glossary</h2>
 
 <dl>
-<dt>aggreate</dt>
+<dt>aggregate</dt>
 <dd>struct and union in C or C++, and class in C++.</dd>
 
 <dt>libcall</dt>
-<dd>GCC's internal library fuction to implement features not available
+<dd>GCC's internal library function to implement features not available
 on the target architecture, such as the 32-bit-by-32-bit
 multiplication on H8/300.</dd>
 
