2004-02-03  Kelley Cook  <kcook@gcc.gnu.org>
	* gcc-3.4/changes.html: Add blurb about read only source tree.

--- a/htdocs/gcc-3.4/changes.html
+++ b/htdocs/gcc-3.4/changes.html
@@ -744,6 +744,11 @@
         Subdirectories will only be configured if they are being built,
         and all subdirectory configures are run from the <code>make</code>
         command.  The top level has been autoconfiscated.</li>
+    <li>Building GCC no longer writes to its source directory.  This
+        should help those wishing to share a read-only source directory
+        over NFS or build from a CD.  The exceptions to this feature are
+        if you configure with either <code>--enable-maintainer-mode</code>
+        or <code>--enable-generated-files-in-srcdir</code>.</li>
     <li>The <code>-W</code> warning option has been renamed to
         <code>-Wextra</code>, which is more easily understood.  The older
         spelling will be retained for backwards compatibility.</li>
