--- a/htdocs/backends.html
+++ b/htdocs/backends.html
@@ -98,7 +98,7 @@ pdp11    |    L   I       cpf m     e
 rs6000   |     Q   C    qr      d a   
 s390     |   ? Q        qr p g bdha e 
 sh       |     Q   CB   qr      dha   
-sparc    |     Q   CB   qr     bd a   
+sparc    |     Q   CB   qr p   bd a   
 stormy16 | ???L  FIC D l   p  m   at  
 v850     | ??    FI       cp gm  h   s
 vax      |  M?    I       cp      a e 
