Remove mentions of dead ports.

--- a/htdocs/projects/beginner.html
+++ b/htdocs/projects/beginner.html
@@ -580,7 +580,7 @@ cleaner and requires less gunk in the implementation.</p>
 
 <p>The targets with text peepholes are:</p>
 <pre>
-  arm avr c4x cris dsp16xx fr30 i960 ip2k m32r m68hc11 m68k
+  arm avr c4x cris fr30 ip2k m32r m68hc11 m68k
   mcore mips mn10300 ns32k pa rs6000 sh sparc.
 </pre>
 </li>
@@ -599,7 +599,7 @@ generate RTL.</p>
 <code>TARGET_ASM_FUNCTION_PROLOGUE/EPILOGUE</code> in
 <code>tm.h</code> are:</p>
 <pre>
-  arc avr dsp16xx i370 i960 m68k ns32k pdp11 vax
+  arc avr m68k ns32k pdp11 vax
 </pre>
 <p>Targets which only have <code>prologue</code> and <code>epilogue</code>
 named expanders are:</p>
@@ -608,7 +608,7 @@ named expanders are:</p>
 </pre>
 <p>Targets which have <em>both</em> are:</p>
 <pre>
-  arm d30v i386 ia64 m32r mips pa rs6000 sparc
+  arm i386 ia64 m32r mips pa rs6000 sparc
 </pre>
 <p>I'd suggest starting with the targets that have both.</p>
 </li>
