Dead/revived ports update.

--- a/htdocs/projects/bp/main.html
+++ b/htdocs/projects/bp/main.html
@@ -763,7 +763,7 @@ parts:</p>
 
 <p>Bounded pointers depend on conditional trap patterns being defined
 in the machine description.  Some machine descriptions already have
-them, namely SPARC, rs6000 (PowerPC), m68k, m88k and i960.  All of
+them, namely SPARC, rs6000 (PowerPC), and m68k.  All of
 these have machine instructions that implement conditional traps with
 one instruction.  Beginning with ISA-II, MIPS has conditional trap
 instructions as well, but its GCC machine description so far lacks
