--- a/htdocs/simtest-howto.html
+++ b/htdocs/simtest-howto.html
@@ -97,8 +97,7 @@ cd gcc &amp;&amp; find . -print | cpio -pdlmu ../combined &amp;&amp; cd ..
 
     <p>The target name suitable for the simulator is usually `*-elf' for a
     target `*'.  There are some exceptions, for instance on powerpc
-    it's powerpc-eabi or powerpc-eabisim, and for i960 there isn't an elf
-    target yet so i960-coff is probably your best choice.  Here we build
+    it's powerpc-eabi or powerpc-eabisim.  Here we build
     <code>arm-elf</code>.</p>
 
 <pre>
@@ -174,17 +173,6 @@ make check-gcc RUNTESTFLAGS=--target_board=arm-sim
  <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00624.html">3.3 20030509 (prerelease)</a>
  <br />
  <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-04/msg00967.html">3.2.3 20030415 (prerelease)</a>
- </td>
-</tr>
-
-<tr valign="top">
- <td>i960-coff</td>
- <td>i960-sim</td>
- <td>32-bit word, little endian</td>
- <td>
- <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00607.html">3.3 20030509 (prerelease)</a>
- <br />
- <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-04/msg00955.html">3.2.3 20030415 (prerelease)</a>
  </td>
 </tr>
 
