--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -87,6 +87,14 @@ to maintain and improve quality.</p>
 
 <dl>
 
+<dt><b>February 6, 2004</b></dt>
+<dd>
+Josef Zlomek of SUSE Labs and Daniel Berlin of IBM Research have contributed
+Variable Tracking.  It generates more accurate debug info about locations of
+variables and allows debugging code compiled
+with <code>-fomit-frame-pointer</code>.
+</dd>
+
 <dt><b>October 18, 2003</b></dt>
 <dd>
 Bernardo Innocenti of Develer S.r.l. has contributed the
